--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crud-ex-backend-yesod"]
 	path = crud-ex-backend-yesod
 	url = https://github.com/rpeszek/crud-ex-backend-yesod.git
+[submodule "crud-ex-frontend-elm"]
+	path = crud-ex-frontend-elm
+	url = https://github.com/rpeszek/crud-ex-frontend-elm.git
